# slangd

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONFIG-ANALYSIS.md  IMPLEMENTATION-PROGRESS.md  MODULE.bazel  README.md  REFACTOR-PLAN.md  REFACTOR.md  SLANG-STUDY-PLAN.md  TODO.md  UNIFIED_SEMANTIC_INDEX.md  UNIFIED_SEMANTIC_INDEX_TODO.md
.claude/commands/: commit.md  pr.md
.github/workflows/: build.yml  push-builder.yml  release-build.yml  release.yml  style.yml
containers/: Dockerfile
docs/: ASYNC_ARCHITECTURE.md  COMPILATION_OPTIONS.md  CONFIGURATION.md  DESIGN_PRINCIPLES.md  GENERIC_CLASS_SPECIALIZATION_FLOW.md  LSP_TYPE_HANDLING.md  MEMORY_ARCHITECTURE.md  PACKAGE_PREAMBLE.md  PREAMBLE.md  SEMANTIC_INDEXING.md  SERVER_ARCHITECTURE.md  SESSION_MANAGEMENT.md  SYMBOL_CONTEXT_HANDLING.md
editor/vscode/: .gitignore  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
editor/vscode/src/: extension.ts
editor/vscode/syntaxes/: systemverilog.tmLanguage.json
include/app/: app_setup.hpp  crash_handler.hpp
include/lsp/: basic.hpp  client_capabilities.hpp  diagnostic.hpp  document_features.hpp  document_symbol.hpp  document_sync.hpp  error.hpp  hierarchy.hpp  json_utils.hpp  lifecycle.hpp  lsp_server.hpp  navigation.hpp  registeration_options.hpp  server.hpp  server_capabilities.hpp  signature.hpp  workspace.hpp
include/slangd/: document_manager.hpp  slangd_lsp_server.hpp  symbol_utils.hpp  workspace_manager.hpp
include/slangd/core/: config.hpp  config_manager.hpp  config_reader.hpp  discovery_provider.hpp  document_manager.hpp  document_state.hpp  global_catalog.hpp  language_service_base.hpp  legacy_lsp_backend.hpp  lsp_backend_facade.hpp  project_layout.hpp  project_layout_builder.hpp  project_layout_service.hpp  slangd_config_file.hpp  slangd_lsp_server.hpp  workspace_manager.hpp
include/slangd/error/: error.hpp
include/slangd/features/: definition_provider.hpp  diagnostics.hpp  diagnostics_provider.hpp  language_feature_provider.hpp  symbols.hpp  symbols_provider.hpp
include/slangd/semantic/: definition_extractor.hpp  definition_index.hpp  diagnostic_converter.hpp  diagnostic_index.hpp  document_symbol_builder.hpp  index_visitor.hpp  semantic_index.hpp  semantic_index_visitor.hpp  symbol_index.hpp  symbol_utils.hpp
include/slangd/services/: document_state_manager.hpp  global_catalog.hpp  language_service.hpp  open_document_tracker.hpp  overlay_session.hpp  preamble_manager.hpp  session_manager.hpp
include/slangd/syntax/: syntax_document_symbol_visitor.hpp
include/slangd/utils/: barrier.hpp  broadcast_event.hpp  canonical_path.hpp  compilation_options.hpp  conversion.hpp  memory_utils.hpp  path_utils.hpp  scoped_timer.hpp  shared_task.hpp  source_utils.hpp  timer.hpp  uri.hpp
src/: main.cpp
src/app/: app_setup.cpp  crash_handler.cpp
src/lsp/: basic.cpp  client_capabilities.cpp  diagnostic.cpp  document_symbol.cpp  document_sync.cpp  lifecycle.cpp  lsp_server.cpp  navigation.cpp  registeration_options.cpp  server.cpp  server_capabilities.cpp  workspace.cpp
src/slangd/: document_manager.cpp  slangd_lsp_server.cpp  symbol_utils.cpp  workspace_manager.cpp
src/slangd/core/: config.cpp  config_manager.cpp  config_reader.cpp  discovery_provider.cpp  document_manager.cpp  global_catalog.cpp  legacy_lsp_backend.cpp  project_layout_builder.cpp  project_layout_service.cpp  slangd_config_file.cpp  slangd_lsp_server.cpp  workspace_manager.cpp
test/: BUILD.bazel  document_manager_test.cpp  slangd_lsp_server_test.cpp
test/lsp/: BUILD.bazel  document_symbol_test.cpp
test/slangd/: BUILD.bazel  document_manager_test.cpp  fixture_utils.hpp  slangd_lsp_server_test.cpp  symbol_utils_test.cpp
test/slangd/common/: async_fixture.hpp  file_fixture.hpp  multifile_semantic_fixture.hpp  semantic_fixture.hpp  semantic_fixtures.hpp  simple_fixture.cpp  simple_fixture.hpp  syntax_fixture.hpp
test/slangd/core/: BUILD.bazel  config_manager_test.cpp  document_manager_test.cpp  project_layout_service_test.cpp  slangd_config_file_test.cpp
test/slangd/features/: definition_provider_test.cpp  definition_provider_workspace_test.cpp  diagnostics_provider_test.cpp  diagnostics_test.cpp  symbols_provider_test.cpp  symbols_test.cpp
test/slangd/fixtures/: compile_test.sv
test/slangd/semantic/: BUILD.bazel  definition_extractor_test.cpp  definition_index_test.cpp  definition_multifile_test.cpp  definition_test.cpp  diagnostic_converter_test.cpp  diagnostic_index_test.cpp  diagnostics_test.cpp  document_symbol_builder_test.cpp  document_symbol_test.cpp  generate_block_test.cpp  semantic_index_basic_test.cpp  semantic_index_multifile_test.cpp  semantic_index_patterns_test.cpp  semantic_index_test.cpp  symbol_index_test.cpp  symbol_utils_test.cpp  test_fixtures.hpp  type_handling_test.cpp  type_reference_test.cpp
test/slangd/semantic/definition/: BUILD.bazel  class_definition_test.cpp  instance_definition_test.cpp  interface_definition_test.cpp  net_definition_test.cpp  scope_definition_test.cpp  subroutine_definition_test.cpp  type_definition_test.cpp  variable_definition_test.cpp
test/slangd/semantic/integration/: BUILD.bazel  module_preamble_test.cpp  multifile_definition_test.cpp  multifile_reference_test.cpp  package_preamble_test.cpp
test/slangd/semantic/preamble/: BUILD.bazel  class_preamble_test.cpp  interface_preamble_test.cpp  module_preamble_test.cpp  package_preamble_test.cpp
test/slangd/services/: BUILD.bazel  global_catalog_test.cpp  overlay_session_test.cpp  preamble_manager_test.cpp
test/slangd/services/legacy/: definition_provider_test.cpp  definition_provider_workspace_test.cpp  diagnostics_provider_test.cpp  symbols_provider_test.cpp
test/slangd/services/new/: overlay_session_test.cpp
test/slangd/syntax/: BUILD.bazel  syntax_document_symbol_test.cpp
test/slangd/utils/: BUILD.bazel  broadcast_event_test.cpp
test/testfiles/: parse_test.sv  simple_module.sv  symbol_test.sv  syntax_test.sv
(+45 files in other folders)
