"""
Build file for Slang LSP Server.
"""

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

# LSP library
cc_library(
    name = "lsp",
    srcs = glob(["src/lsp/*.cpp"]),
    hdrs = glob(["include/lsp/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@jsonrpc",
        "@spdlog",
    ],
)

# App utilities library
cc_library(
    name = "app",
    srcs = glob(["src/app/*.cpp"]),
    hdrs = glob(["include/app/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@fmt",
        "@spdlog",
    ],
)

# Slangd core library
cc_library(
    name = "slangd_core",
    srcs = glob(["src/slangd/**/*.cpp"]),
    hdrs = glob(["include/slangd/**/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":lsp",
        "@mimalloc",
        "@mimalloc//:mimalloc-api",
        "@slang",
        "@spdlog",
        "@yaml-cpp",
    ],
)

# Slangd executable
cc_binary(
    name = "slangd",
    srcs = ["src/main.cpp"],
    malloc = "@mimalloc",
    visibility = ["//visibility:public"],
    deps = [
        ":app",
        ":slangd_core",
        "@spdlog",
    ],
)
