"""
Bazel module file for Slang LSP Server.
"""

module(
    name = "slangd",
    version = "0.1.0",
)

# Bazel rules for C/C++
bazel_dep(name = "rules_cc", version = "0.2.4")

# Slang SystemVerilog Compiler Library
bazel_dep(name = "slang", version = "9.0.0")

git_override(
    module_name = "slang",
    remote = "https://github.com/hankhsu1996/slang.git",
    commit = "2a87bdca",
)

# local_path_override(
#     module_name = "slang",
#     path = "../slang",
# )

# JSON-RPC C++ Library
bazel_dep(name = "jsonrpc", version = "0.0.0")
git_override(
    module_name = "jsonrpc",
    remote = "https://github.com/hankhsu1996/jsonrpc-cpp-lib.git",
    commit = "448d507",
)

# LLVM
bazel_dep(name = "llvm-project", version = "17.0.3.bcr.2")

# SPDLOG Logging Library
bazel_dep(name = "spdlog", version = "1.15.1")

# YAML Parser Library
bazel_dep(name = "yaml-cpp", version = "0.8.0")

# fmt String Formatting Library
bazel_dep(name = "fmt", version = "11.1.3")

# Testing framework
bazel_dep(name = "catch2", version = "3.8.0")

# Toolchains for musl libc
bazel_dep(name = "toolchains_musl", version = "0.1.27", dev_dependency = True)
toolchains_musl = use_extension("@toolchains_musl//:toolchains_musl.bzl", "toolchains_musl", dev_dependency = True)
toolchains_musl.config()

# Development tools
# bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
# git_override(
#     module_name = "hedron_compile_commands",
#     commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
#     remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
# )

# Hedron's Compile Commands Extractor for Bazel (temporary fork with fixes)
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7"
)
