"""
Build file for tests.
"""

cc_test(
    name = "document_manager_test",
    timeout = "short",
    srcs = ["document_manager_test.cpp"],
    data = glob(
        ["testfiles/**"],
        allow_empty = True,
    ),
    deps = [
        "//:slangd_core",
        "@bazel_tools//tools/cpp/runfiles",
        "@catch2//:catch2_main",
        "@slang",
    ],
)

cc_test(
    name = "slangd_lsp_server_test",
    timeout = "short",
    srcs = ["slangd_lsp_server_test.cpp"],
    data = glob(
        ["testfiles/**"],
        allow_empty = True,
    ),
    deps = [
        "//:slangd_core",
        "@catch2//:catch2_main",
        "@slang",
    ],
)
