"""
Build file for slangd tests.
"""

filegroup(
    name = "fixtures",
    srcs = glob(["fixtures/**"]),
)

cc_library(
    name = "simple_fixture",
    srcs = ["common/simple_fixture.cpp"],
    hdrs = ["common/simple_fixture.hpp"],
    deps = [
        "//:slangd_core",
        "@fmt",
        "@slang",
    ],
)

cc_library(
    name = "file_fixture",
    hdrs = ["common/file_fixture.hpp"],
    deps = [
        "//:slangd_core",
    ],
)

cc_test(
    name = "project_layout_service_test",
    timeout = "short",
    srcs = [
        "core/project_layout_service_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "overlay_session_test",
    timeout = "short",
    srcs = [
        "services/overlay_session_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "global_catalog_test",
    timeout = "short",
    srcs = [
        "services/global_catalog_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "multifile_definition_test",
    timeout = "short",
    srcs = [
        "semantic/integration/multifile_definition_test.cpp",
        "semantic/test_fixtures.hpp",
    ],
    deps = [
        ":file_fixture",
        "//:slangd_core",
        "@catch2",
        "@fmt",
        "@slang",
    ],
)

cc_test(
    name = "semantic_index_patterns_test",
    timeout = "short",
    srcs = [
        "semantic/semantic_index_patterns_test.cpp",
    ],
    deps = [
        ":simple_fixture",
        "//:slangd_core",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "multifile_reference_test",
    timeout = "short",
    srcs = [
        "semantic/integration/multifile_reference_test.cpp",
        "semantic/test_fixtures.hpp",
    ],
    deps = [
        ":file_fixture",
        "//:slangd_core",
        "@catch2",
        "@fmt",
        "@slang",
    ],
)

cc_test(
    name = "definition_extractor_test",
    timeout = "short",
    srcs = [
        "semantic/definition_extractor_test.cpp",
    ],
    deps = [
        ":simple_fixture",
        "//:slangd_core",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "semantic_index_test",
    timeout = "short",
    srcs = [
        "semantic/semantic_index_test.cpp",
    ],
    deps = [
        ":simple_fixture",
        "//:slangd_core",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "document_symbol_builder_test",
    timeout = "short",
    srcs = [
        "semantic/document_symbol_builder_test.cpp",
    ],
    deps = [
        ":simple_fixture",
        "//:slangd_core",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "generate_block_test",
    timeout = "short",
    srcs = [
        "semantic/generate_block_test.cpp",
    ],
    deps = [
        ":simple_fixture",
        "//:slangd_core",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "type_handling_test",
    timeout = "short",
    srcs = [
        "semantic/type_handling_test.cpp",
    ],
    deps = [
        ":simple_fixture",
        "//:slangd_core",
        "@catch2",
        "@fmt",
        "@slang",
    ],
)

cc_test(
    name = "diagnostic_index_test",
    timeout = "short",
    srcs = [
        "semantic/diagnostic_index_test.cpp",
    ],
    deps = [
        ":simple_fixture",
        "//:slangd_core",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "symbol_utils_test",
    timeout = "short",
    srcs = [
        "semantic/symbol_utils_test.cpp",
    ],
    deps = [
        ":simple_fixture",
        "//:slangd_core",
        "@catch2",
        "@slang",
    ],
)
