"""
Build file for slangd semantic tests.
"""

load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "diagnostics_test",
    timeout = "short",
    srcs = [
        "diagnostics_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:semantic_fixture",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "symbol_utils_test",
    timeout = "short",
    srcs = [
        "symbol_utils_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:semantic_fixture",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "type_reference_test",
    timeout = "short",
    srcs = [
        "type_reference_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:semantic_fixture",
        "@catch2",
        "@slang",
    ],
)
