"""
Build file for slangd services tests.
"""

load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "overlay_session_test",
    timeout = "short",
    srcs = [
        "overlay_session_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:async_fixture",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "preamble_manager_test",
    timeout = "short",
    srcs = [
        "preamble_manager_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:async_fixture",
        "@catch2",
        "@slang",
    ],
)
