"""
Build file for slangd utils tests.
"""

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "broadcast_event_test",
    timeout = "short",
    srcs = [
        "broadcast_event_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:async_fixture",
        "@catch2",
        "@spdlog",
    ],
)
