"""
Build file for slangd semantic definition tests.
"""

load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "type_definition_test",
    timeout = "short",
    srcs = [
        "type_definition_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:simple_fixture",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "subroutine_definition_test",
    timeout = "short",
    srcs = [
        "subroutine_definition_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:simple_fixture",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "scope_definition_test",
    timeout = "short",
    srcs = [
        "scope_definition_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:simple_fixture",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "interface_definition_test",
    timeout = "short",
    srcs = [
        "interface_definition_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:simple_fixture",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "variable_definition_test",
    timeout = "short",
    srcs = [
        "variable_definition_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:simple_fixture",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "net_definition_test",
    timeout = "short",
    srcs = [
        "net_definition_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:simple_fixture",
        "@catch2",
        "@slang",
    ],
)

cc_test(
    name = "instance_definition_test",
    timeout = "short",
    srcs = [
        "instance_definition_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:simple_fixture",
        "@catch2",
        "@slang",
    ],
)
