"""
Build file for slangd semantic preamble tests.
"""

load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "module_preamble_test",
    timeout = "short",
    srcs = [
        "module_preamble_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:multifile_semantic_fixture",
        "@catch2",
        "@fmt",
        "@slang",
    ],
)

cc_test(
    name = "package_preamble_test",
    timeout = "short",
    srcs = [
        "package_preamble_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:multifile_semantic_fixture",
        "@catch2",
        "@fmt",
        "@slang",
    ],
)

cc_test(
    name = "interface_preamble_test",
    timeout = "short",
    srcs = [
        "interface_preamble_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:multifile_semantic_fixture",
        "@catch2",
        "@fmt",
        "@slang",
    ],
)

cc_test(
    name = "class_preamble_test",
    timeout = "short",
    srcs = [
        "class_preamble_test.cpp",
    ],
    deps = [
        "//:slangd_core",
        "//test/slangd:multifile_semantic_fixture",
        "@catch2",
        "@fmt",
        "@slang",
    ],
)
